add files management functionality, fixes